--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,6 +22,8 @@ language: de
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Wanderungen durch die interessantesten Gegenden des Sächsischen Obererzgebirges
   (Zweites Heft)
 
